--- a/FrontEndMVC/src/main/resources/templates/index.html
+++ b/FrontEndMVC/src/main/resources/templates/index.html
@@ -295,8 +295,8 @@
                 emailId: document.getElementById("emailId").value
             };
             
-            // Make a POST request to the API running on port 8081
-            axios.post('http://localhost:8081/customers/addCustomer', customerData)
+            // Make a POST request to the API running on port 8082
+            axios.post('http://localhost:8082/customers/addCustomer', customerData)
                 .then(response => {
                     console.log('Customer added successfully:', response.data);
                     alert('Customer added successfully!');
@@ -316,7 +316,7 @@
 		        trxnType: document.getElementById("trxnType").value
 		    };
 		
-		    axios.post('http://localhost:8081/transactions/addTransaction', transactionData)
+		    axios.post('http://localhost:8083/transactions/addTransaction', transactionData)
 		        .then(response => {
 		            console.log('Transaction added successfully:', response.data);
 		            alert('Transaction added successfully!');
@@ -330,6 +330,8 @@
 		//Loading Book Table
 		document.addEventListener("DOMContentLoaded", () => {
 		    fetchBooks();
+		    fetchCustomers();
+		    fetchTransactions();
 		});
 		
 		function fetchBooks() {
@@ -343,7 +345,23 @@
 		            // Handle error or show notification
 		        });
 		}
+		//Fetch Customers And Transactions
+		function fetchCustomers() {
+		    axios.get('http://localhost:8082/customers')
+		        .then(response => {
+		            populateCustomersTable(response.data);
+		        })
+		        .catch(error => console.error('Error fetching customers:', error));
+		}
 		
+		function fetchTransactions() {
+		    axios.get('http://localhost:8083/transactions')
+		        .then(response => {
+		            populateTransactionsTable(response.data);
+		        })
+		        .catch(error => console.error('Error fetching transactions:', error));
+		}
+		//Populate Book table
 		function populateBooksTable(books) {
 		    const booksTable = document.getElementById('booksTable').getElementsByTagName('tbody')[0];
 		    booksTable.innerHTML = ''; // Clear existing table data
@@ -359,6 +377,45 @@
 		        authorFirstNameCell.textContent = book.authorFirstName;
 		        authorLastNameCell.textContent = book.authorLastName;
 		        ratingCell.textContent = book.rating;
+		    });
+		}
+		function populateCustomersTable(customers) {
+		    const customersTable = document.getElementById('customersTable').getElementsByTagName('tbody')[0];
+		    customersTable.innerHTML = ''; // Clear existing table data
+		
+		    customers.forEach(customer => {
+		        let row = customersTable.insertRow();
+		        let firstNameCell = row.insertCell(0);
+		        let lastNameCell = row.insertCell(1);
+		        let addressCell = row.insertCell(2);
+		        let phoneCell = row.insertCell(3);
+		        let emailIdCell = row.insertCell(4);
+		
+		        firstNameCell.textContent = customer.firstName;
+		        lastNameCell.textContent = customer.lastName;
+		        addressCell.textContent = customer.address;
+		        phoneCell.textContent = customer.phone;
+		        emailIdCell.textContent = customer.emailId
+		    });
+		}
+		
+		function populateTransactionsTable(transactions) {
+		    const transactionsTable = document.getElementById('transactionsTable').getElementsByTagName('tbody')[0];
+		    transactionsTable.innerHTML = ''; // Clear existing table data
+		
+		    transactions.forEach(transaction => {
+		        let row = transactionsTable.insertRow();
+		        let transactionIdCell = row.insertCell(0);
+		        let customerIdCell = row.insertCell(1);
+		        let bookIdCell = row.insertCell(2);
+		        let trxnDateCell = row.insertCell(3);
+		        let trxnTypeCell = row.insertCell(4);
+				
+				transactionIdCell.textContent = transaction.transactionId;
+		        customerIdCell.textContent = transaction.customerId;
+		        bookIdCell.textContent = transaction.bookId;
+		        trxnDateCell.textContent = transaction.trxnDate;
+		        trxnTypeCell.textContent = transaction.trxnType;
 		    });
 		}
     </script>
